--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.9.4",
     "tailwindcss": "^4.1.14"
   },
